--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "dependencies": {
     "@types/ws": "^8.5.3",
     "discord-api-types": "^0.37.119",
-    "typescript": "^4.8.3",
     "undici": "^5.10.0",
     "ws": "^8.9.0"
   },
   "devDependencies": {
     "@types/bun": "^1.2.8",
-    "@types/node": "^22.13.14"
+    "@types/node": "^22.13.14",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^9.25.1",
+    "typescript": "^5.8.3"
   }
 }
